@@ -1,3 +1,13 @@
+2012-08-23  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/util/marks.jl: removed [fuchur]
+
+	* lisp/sawfish/wm/tabs/tab.jl: implement mark-window here,
+	fix an issue that tab didn't work anymore then a window
+	selected for tabbing doesn't exist before tabbing was done.
+	Change cursor shape when operating with tabs [fuchur]
+
+	* man/news.texi: update
+
 2012-07-11  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* debian/*.links: removed, fixed building on Debian Unstable
 
